# qgis-nbextension

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
examples/: render_layer.py
notebooks/: Qgis_extension.ipynb
qgis_ipython/: __init__.py  magics.py
qgisnbextension/: __init__.py  magics.py  startup.py  status.py
