[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qgis-nbextension"
description = "QGIS notebook extension"
version = "1.1"
readme = "README.md"
requires-python = ">= 3.10"
classifiers=[
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: GIS",
    "Framework :: IPython"
]

[[project.authors]]
name = "3Liz"
email = "infos@3liz.org"

[[project.maintainers]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[project.urls]
Homepage = "https://github.com/3liz/qgis-nbextension"
Repository = "https://github.com/3liz/qgisnbextension"

[tool.setuptools.packages.find]
include = [
    "qgisnbextension",
    "qgisnbextension.*",
]


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "ANN", "W", "COM", "RUF"]
ignore = ["ANN101", "ANN102", "ANN002", "ANN003", "RUF100", "RUF029"]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-none-returning = true
suppress-dummy-args = true

#
# Mypy
#
[tool.mypy]
python_version = "3.10"
allow_redefinition = true
plugins = [ "pydantic.mypy" ]

[[tool.mypy.overrides]]
module = "qgis.*"
ignore_missing_imports = true



